--- a/mobile/AutoDocMobile/package.json
+++ b/mobile/AutoDocMobile/package.json
@@ -10,10 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-native": "0.83.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native/new-app-screen": "0.83.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/native-stack": "^7.9.0",
+    "react": "19.2.0",
+    "react-hook-form": "^7.69.0",
+    "react-native": "0.83.0",
+    "react-native-calendars": "^1.1309.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-keychain": "^9.0.0",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.4.0",
+    "react-native-svg": "^15.9.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
