--- a/mobile/AutoDocMobile/package.json
+++ b/mobile/AutoDocMobile/package.json
@@ -14,6 +14,7 @@
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
+    "firebase": "^12.7.0",
     "react": "19.2.0",
     "react-hook-form": "^7.69.0",
     "react-native": "0.83.0",
