--- a/mobile/AutoDocMobile/package.json
+++ b/mobile/AutoDocMobile/package.json
@@ -10,7 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/auth": "^23.7.0",
+    "@react-native-firebase/firestore": "^23.7.0",
+    "@react-native-firebase/storage": "^23.7.0",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
@@ -18,6 +22,7 @@
     "react": "19.2.0",
     "react-hook-form": "^7.69.0",
     "react-native": "0.83.0",
+    "react-native-blob-util": "^0.24.5",
     "react-native-calendars": "^1.1309.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-fs": "^2.20.0",
